kubernetes/applications/manifests/flarewatcher/flarewatcher-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flarewatcher-ingress
  namespace: flarewatcher
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: flarewatcher-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - flarewatcher.example.com
      secretName: flarewatcher-tls
  rules:
    - host: flarewatcher.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flarewatcher
                port:
                  number: 3000
